fix: responsive ofset bug  on tablet mode
test : http://codepen.io/anon/pen/wKOYqG

--- a/less/metro-responsive.less
+++ b/less/metro-responsive.less
@@ -91,7 +91,7 @@ h1, h2, h3, h4, h5, h6, p  {
 
             & > .cell, & > .cell[class*=colspan] {
                 width: 48.936175% ;
-                margin: 0 0 10px 0;
+                margin-bottom: 10px;
 
                 &:nth-child(odd) {
                     margin-left: 0;
@@ -136,7 +136,7 @@ h1, h2, h3, h4, h5, h6, p  {
 
                 & > .cell, & > .cell[class*=colspan] {
                     width: 50% ;
-                    margin: 0 0 10px 0 ;
+                    margin-bottom: 10px;
 
                     &:nth-child(odd) {
                         margin-left: 0;
